fix: some overflow issues caused by the footer

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
 #__next {
     height: min-content;
     min-height: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
